changed script to load vue

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 	</div>
 
-        <script type="text/javascript" src="https://unpkg.com/vue/dist/vue.min.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
         <script src="JS/hangman.js"></script>
     </body>
 </html>
